// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message constructor should construct properly 1`] = `
Object {
  "from": "from",
  "text": "text",
  "timestamp": "timestamp",
  "type": "type",
  "unread": false,
}
`;

exports[`Message constructor should set "from" to empty string when "from" is not passed in 1`] = `
Object {
  "from": "",
  "text": "text",
  "timestamp": "timestamp",
  "type": "type",
  "unread": false,
}
`;

exports[`Message constructor should set "text" to empty when "text" is not passed in 1`] = `
Object {
  "from": "from",
  "text": "",
  "timestamp": "timestamp",
  "type": "type",
  "unread": false,
}
`;
